boreal/tests/assets/invalid_files/compilation/import_invalid.yar
// [error: syntax error]
import "time"
import ""

rule a {
    condition: true
}
